--- a/templates/header.html
+++ b/templates/header.html
@@ -7,16 +7,16 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand text-capitalize" href="#">Social Network</a>
+            <a class="navbar-brand text-capitalize" href="#/">Social Network</a>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav" ng-if="authService.isLoggedIn">
-                <li><a href="#"><i class="glyphicon glyphicon-comment"></i> News Feed</a></li>
+            <ul class="nav navbar-nav" ng-if="authService.isLoggedIn()">
+                <li><a href="#/"><i class="glyphicon glyphicon-comment"></i> News Feed</a></li>
                 <li><a href="#"><i class="glyphicon glyphicon-user"></i> Friends Request</a></li>
                 <li><a href="#"><i class="glyphicon glyphicon-cog"></i> Edit Profile</a></li>
                 <li><a href="#"><i class="glyphicon glyphicon-lock"></i> Change Password</a></li>
-                <li><a href="#"><i class="glyphicon glyphicon-log-out"></i> Logout</a></li>
+                <li><a href="#" ng-click="logout()"><i class="glyphicon glyphicon-log-out" ng-click="logout()"></i> Logout</a></li>
             </ul>
 
             <form class="navbar-form navbar-right" role="search">
