--- a/templates/header.html
+++ b/templates/header.html
@@ -15,7 +15,7 @@
                 <li><a href="#/"><i class="glyphicon glyphicon-comment"></i> News Feed</a></li>
                 <li><a href="#"><i class="glyphicon glyphicon-user"></i> Friends Request</a></li>
                 <li><a href="#"><i class="glyphicon glyphicon-cog"></i> Edit Profile</a></li>
-                <li><a href="#"><i class="glyphicon glyphicon-lock"></i> Change Password</a></li>
+                <li><a href="#/profile/password"><i class="glyphicon glyphicon-lock"></i> Change Password</a></li>
                 <li><a href="#" ng-click="logout()"><i class="glyphicon glyphicon-log-out" ng-click="logout()"></i> Logout</a></li>
             </ul>
 
