--- a/templates/partials/friends-sidebar.html
+++ b/templates/partials/friends-sidebar.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+<div id="right-sidebar" class="panel panel-default pull-right" ng-init="getAllOwnFriends()">
+    <div class="panel-heading">Friends - {{friends.length}} total</div>
+    <div class="panel-body">
+        <div ng-repeat="friend in friends">
+            <a ng-href="#/users/:{{friend.username}}">
+                <div id="friends-sidebar">
+                    <img ng-src="{{friend.profileImageData}}" src='img/no-image.jpg'/>
+                    <p>{{friend.name.split(' ').slice(0, -1).join(' ')}}</p>
+                </div>
+            </a>
+        </div>
+    </div>
+</div>
