--- a/templates/partials/home.html
+++ b/templates/partials/home.html
@@ -61,10 +61,9 @@
             <button type="button" ng-click="register(user)" class="btn btn-default">Register</button>
         </div>
     </div>
-
 </div>
 
-<div class="forms-wrapper" ng-controller="AuthController" ng-if="authService.isLoggedIn()">
-    <p>Hi, {{authService.getCurrentUser().userName}}, you just logged in!</p>
+<div ng-controller="AuthController" ng-if="authService.isLoggedIn()">
+    <div ng-include="'templates/partials/friends-sidebar.html'"></div>
 </div>
 
