--- a/css/css.css
+++ b/css/css.css
@@ -1,10 +1,3 @@
-.forms-wrapper{
-    width: 300px;
-}
-
-html, body, .container {
-    height: 100%;
-}
 
 .container {
     display: table;
@@ -29,6 +22,26 @@ html, body, .container {
     margin-left: 10px;
 }
 
-#footer {
- clear: both;
+body {
+    margin-top: 80px;
+}
+
+#friends-sidebar {
+    float: left;
+    margin: 5px;
+    align-content: space-around;
+}
+
+#friends-sidebar > img {
+    max-height: 90px;
+    max-width: 85px;
+    
+}
+
+#friends-sidebar > p {
+    text-align: center;
+}
+
+#right-sidebar {
+    width: 320px;
 }
