--- a/templates/header.html
+++ b/templates/header.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
+<nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
@@ -14,7 +14,7 @@
             <ul class="nav navbar-nav" ng-if="authService.isLoggedIn()">
                 <li><a href="#/"><i class="glyphicon glyphicon-comment"></i> News Feed</a></li>
                 <li><a href="#"><i class="glyphicon glyphicon-user"></i> Friends Request</a></li>
-                <li><a href="#"><i class="glyphicon glyphicon-cog"></i> Edit Profile</a></li>
+                <li><a href="#/profile"><i class="glyphicon glyphicon-cog"></i> Edit Profile</a></li>
                 <li><a href="#/profile/password"><i class="glyphicon glyphicon-lock"></i> Change Password</a></li>
                 <li><a href="#" ng-click="logout()"><i class="glyphicon glyphicon-log-out" ng-click="logout()"></i> Logout</a></li>
             </ul>
