Displaying friends posts on the logged user news feed.

--- a/templates/partials/home.html
+++ b/templates/partials/home.html
@@ -63,7 +63,9 @@
     </div>
 </div>
 
+
 <div ng-controller="AuthController" ng-if="authService.isLoggedIn()">
+    <div ng-include="'templates/partials/user-wall.html'"></div>
     <div ng-include="'templates/partials/friends-sidebar.html'"></div>
 </div>
 
