--- a/css/css.css
+++ b/css/css.css
@@ -1,3 +1,21 @@
+.forms-wrapper {
+    width: 295px;
+}
+
+#post-body {
+    margin-top: 10px;
+}
+
+#post-img {
+    max-height: 60px;
+    max-width: 55px;
+    float: left;
+    margin-right: 5px;
+}
+
+#user-wall-post {
+    padding-bottom: 30px;
+}
 
 .container {
     display: table;
