--- a/templates/partials/user-wall.html
+++ b/templates/partials/user-wall.html
@@ -1,1 +1,27 @@
-<div></div>
+<div ng-if="authService.isLoggedIn()" ng-init="loadNewsFeed()">
+    <div class="col-md-8">
+        <div  id="user-wall-post" ng-repeat="post in data">
+            <div class="panel panel-default">
+                <div class="panel-primary">
+                    <img ng-src="{{post.author.profileImageData}}" id="post-img"/>
+                    <span>{{post.author.name}}</span><br/>
+                    <span>{{post.date | date: 'dd-MM-yyyy HH:mm:ss'}}</span>
+                </div>
+
+                <div class="panel-body" id="post-body">
+
+                    <p>{{post.postContent}}</p>
+
+                    <div class="pull-right">
+                        <span>{{post.likesCount}} <span class="glyphicon glyphicon-thumbs-up"></span> Like</span>
+                        <span>{{post.comments.length}} <span class="glyphicon glyphicon-comment"></span> Comment</span>
+                    </div>
+                </div>
+
+
+
+            </div>
+        </div>
+    </div>
+
+</div>
