Added search by user name

--- a/css/css.css
+++ b/css/css.css
@@ -13,6 +13,11 @@
     padding-right: 10px;
 }
 
+#search-img {
+    max-height: 30px;
+    padding-right: 10px;
+}
+
 #img-request {
     max-width: 52px;
     margin-right: 10px;
@@ -72,4 +77,8 @@ body {
 
 #right-sidebar {
     width: 320px;
+}
+
+.dropdown-menu {
+    width: 196px !important;
 }
