--- a/templates/partials/home.html
+++ b/templates/partials/home.html
@@ -49,11 +49,11 @@
             </p>
 
             <p>
-                <input type="radio" name="sex" id="sex-m" value="m">
+                <input type="radio" ng-model="user.gender" name="sex" id="sex-m" value="1">
                 <label for="sex-m">Male</label>
-                <input type="radio" name="sex" id="sex-f" value="f">
+                <input type="radio" ng-model="user.gender" name="sex" id="sex-f" value="2">
                 <label for="sex-f">Female</label>
-                <input type="radio" name="sex" id="sex-other" value="o">
+                <input type="radio" ng-model="user.gender" name="sex" id="sex-other" value="3">
                 <label for="sex-other">Other</label>
             </p>
 
