--- a/templates/header.html
+++ b/templates/header.html
@@ -40,10 +40,22 @@
             </ul>
 
             <form class="navbar-form navbar-right" role="search" >
-                <div class="form-group"  ng-controller="HomeController">
-                    <input type="text" class="form-control" placeholder="Search"/>
+                <div class="dropdown" dropdown ng-controller="HomeController">
+
+                    <input class="form-control dropdown-toggle" dropdown-toggle
+                           type="text" placeholder="Search" ng-model="searchTerm"
+                           ng-change="search(searchTerm)" ng-minlength="2"/>
+
+                    <ul class="dropdown-menu" dropdown-menu ng-show="searchTerm">
+                        <li ng-repeat="user in data">
+                            <p>
+                                <img id="search-img" ng-src="{{user.profileImageData}}" class="post-img" src='img/no-image.jpg'/>
+                                <span>{{user.name}}</span>
+                            </p>
+                        </li>
+                    </ul>
                 </div>
-                <button type="submit" class="btn btn-default" ng-click="search()">Submit</button>
+
             </form>
         </div>
     </div>
