--- a/templates/partials/friends-sidebar.html
+++ b/templates/partials/friends-sidebar.html
@@ -1,4 +1,4 @@
-<div id="right-sidebar" class="panel panel-default pull-right" ng-init="getAllOwnFriends()">
+<div id="right-sidebar" class="panel panel-default pull-right" ng-init="getOwnFriends()">
     <div class="panel-heading">Friends - {{friends.length}} total</div>
     <div class="panel-body">
         <div ng-repeat="friend in friends">
