--- a/templates/partials/user-wall.html
+++ b/templates/partials/user-wall.html
@@ -2,13 +2,13 @@
     <div class="col-md-8">
             <div id="user-wall-post" ng-repeat="post in data">
                 <div class="panel panel-default">
-                    <div>
+                    <div id="post-header">
                         <img ng-src="{{post.author.profileImageData}}" class="post-img" src='img/no-image.jpg'/>
                         <span>{{post.author.name}}</span><br/>
-                        <span>{{post.date | date: 'dd-MM-yyyy HH:mm:ss'}}</span>
+                        <span>{{post.date | date: 'dd-MM-yyyy HH:mm:ss'}}</span><hr/>
                     </div>
 
-                    <div class="panel-body" id="post-body">
+                    <div class="panel-body post-body">
                         <p>{{post.postContent}}</p>
 
                         <div class="pull-right">
@@ -22,11 +22,11 @@
                     <div ng-repeat="comment in post.comments">
                         <div>
                             <img ng-src="{{comment.author.profileImageData}}" class="post-img" src='img/no-image.jpg'/>
-                            <span>{{comment.author.name}}</span>
-                            <span>{{comment.date | date: 'dd-MM-yyyy HH:mm:ss'}}</span>
+                            <span>{{comment.author.name}}</span><br/>
+                            <span>{{comment.date | date: 'dd-MM-yyyy HH:mm:ss'}}</span><hr/>
                         </div>
 
-                        <div class="panel-body">
+                        <div class="panel-body post-body">
                             <p>{{comment.commentContent}}</p>
 
                             <div class="pull-right">
